# zerion-ta-rebalancer

./: .dockerignore  .env.example  .gitignore  .npmrc  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
docs/: ARCHITECTURE.md  DEMO.md  POLICY.md  RECOVERY.md
scripts/: setup.ts  sync-to-linux.sh
src/: config.ts  cron.ts  index.ts  types.ts
src/agent/: index.ts  prompts.ts  tools.ts
src/agent/tools/: actions.ts  helpers.ts  read.ts
src/api/: auth.ts  routes.ts  server.ts
src/api/routes/: agent.ts  baskets.ts  system.ts  telegram.ts  wallets.ts
src/bot/: index.ts
src/core/: db.ts  gecko-resolve.ts  ohlcv.ts  policy.ts  positions-parser.ts  rebalancer.ts  ta.ts  token-registry.ts  zerion-config-sync.ts  zerion.ts
src/core/rebalance/: plan.ts
voice/: .env.example  README.md  install.sh  pyproject.toml
voice/face/: face.css  face.js  index.html
voice/systemd/: zerion-face-http.service  zerion-voice.service
voice/voice/: audio.py  face_ws.py  rebalancer_client.py  vad.py  voice_clients.py  voice_loop.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: App.tsx  api.ts  index.css
web/src/components/: ActivityView.tsx  BasketCard.tsx  Dashboard.tsx  FirstAllocOverlay.tsx  Login.tsx  NewBasketModal.tsx  PolicyCard.tsx  SettingsPanel.tsx  Skeleton.tsx  StatsStrip.tsx  WalletView.tsx  ui.tsx
web/src/utils/: format.ts
